--- a/Frontend/public/orders.html
+++ b/Frontend/public/orders.html
@@ -8,7 +8,9 @@
 <body>
     <h1>My Orders</h1>
      <hr/>
-     <a href="index.html">Home</a> | <a href="list.html">catalog</a>|<a href="login.html">SignIn</a>
+     <a href="index.html">Home</a> | <a href="list.html">catalog</a>|<a href="login.html">SignIn</a>|<a href="changepassword.html">changepassword</a> |
+     <a href="orders.html">orders</a>
+
      <hr/>
      <div>
         <button onclick="fetchOrders()">Get My Orders List</button>
