--- a/Frontend/public/register.html
+++ b/Frontend/public/register.html
@@ -6,7 +6,8 @@
     <body>
         <h1>Transflower Store</h1>
         <hr/>
-        <a href="index.html">Home</a> | <a href="list.html">Catalog</a>|<a href="login.html">SignIn</a>
+        <a href="index.html">Home</a> | <a href="list.html">Catalog</a>|<a href="login.html">SignIn</a>|
+        <a href="changepassword.html">changepassword</a> | <a href="orders.html">orders</a>
         <hr/>
         <div>
             
